--- a/templates/cronjob.yaml
+++ b/templates/cronjob.yaml
@@ -54,16 +54,9 @@ spec:
               volumeMounts:
                 - name: workspace
                   mountPath: /workspace
-              {{- if .Values.cronjob.backendRepo.sshKey }}
-                - name: ssh-key
-                  mountPath: /root/.ssh
-                  readOnly: true
-              {{- end }}
-              {{- if .Values.cronjob.backendRepo.sshKey }}
               env:
                 - name: GIT_SSH_COMMAND
-                  value: "ssh -o StrictHostKeyChecking=no -i /root/.ssh/id_rsa"
-              {{- end }}
+                  value: "ssh -o StrictHostKeyChecking=no"
           containers:
             - name: db-dump
               image: {{ .Values.cronjob.postgresImage.repository }}:{{ .Values.cronjob.postgresImage.tag }}
@@ -83,13 +76,6 @@ spec:
                   
                   # Make dump.sh executable
                   chmod +x dump.sh
-                  
-                  # Export database credentials
-                  export PGHOST="$DB_HOST"
-                  export PGPORT="$DB_PORT"
-                  export PGUSER="$DB_USER"
-                  export PGPASSWORD="$DB_PASSWORD"
-                  export PGDATABASE="$DB_NAME"
                   
                   echo "Running dump.sh..."
                   ./dump.sh
